fix modifiers popup size and align text in center, also fix tip amount popup

--- a/src/assets/scss/modals/POSItemOptions.scss
+++ b/src/assets/scss/modals/POSItemOptions.scss
@@ -293,6 +293,9 @@
       text-align: right !important;
       padding-right: 1rem !important;
     }
+    .POSItemOptions_quantity_inputs {
+      width: $px115 !important;
+    }
   }
   .POSItemOptions .modal-dialog .modal-content .modal-footer {
     .btn-announce{
